src/main/java/eugenio/parser/LenguajeCParser.java
// Generated from LenguajeC.g4 by ANTLR 4.7.2
package eugenio.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LenguajeCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOID=1, MAIN=2, PA=3, PC=4, LLA=5, LLC=6, IGUAL=7, SEMI=8, DC=9, ELSEIF=10, 
		IF=11, ELSE=12, WHILE=13, AND=14, OR=15, MAY=16, MEN=17, MAYIGU=18, MENIGU=19, 
		IGU=20, DIF=21, TRUE=22, FALSE=23, ENTERO=24, IMPRIMIR=25, INT=26, ID=27, 
		SUM=28, RES=29, MUL=30, DIV=31, ESPACIOS=32, LINEA=33, BLOQUE=34;
	public static final int
		RULE_programa = 0, RULE_inicio = 1, RULE_fin = 2, RULE_encabezado = 3, 
		RULE_contenido = 4, RULE_declarar = 5, RULE_declararasignar = 6, RULE_imprimir = 7, 
		RULE_asignar = 8, RULE_condicional = 9, RULE_condicion = 10, RULE_sino = 11, 
		RULE_sinoentonces = 12, RULE_expr = 13, RULE_mientras = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "inicio", "fin", "encabezado", "contenido", "declarar", "declararasignar", 
			"imprimir", "asignar", "condicional", "condicion", "sino", "sinoentonces", 
			"expr", "mientras"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'main'", "'('", "')'", "'{'", "'}'", "'='", "';'", "'\"'", 
			"'else if'", "'if'", "'else'", "'while'", "'&&'", "'||'", "'>'", "'<'", 
			"'>='", "'<='", "'=='", "'!='", "'true'", "'false'", "'int'", "'printf'", 
			null, null, "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VOID", "MAIN", "PA", "PC", "LLA", "LLC", "IGUAL", "SEMI", "DC", 
			"ELSEIF", "IF", "ELSE", "WHILE", "AND", "OR", "MAY", "MEN", "MAYIGU", 
			"MENIGU", "IGU", "DIF", "TRUE", "FALSE", "ENTERO", "IMPRIMIR", "INT", 
			"ID", "SUM", "RES", "MUL", "DIV", "ESPACIOS", "LINEA", "BLOQUE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LenguajeC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LenguajeCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public EncabezadoContext encabezado() {
			return getRuleContext(EncabezadoContext.class,0);
		}
		public InicioContext inicio() {
			return getRuleContext(InicioContext.class,0);
		}
		public ContenidoContext contenido() {
			return getRuleContext(ContenidoContext.class,0);
		}
		public FinContext fin() {
			return getRuleContext(FinContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			encabezado();
			setState(31);
			inicio();
			setState(32);
			contenido();
			setState(33);
			fin();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InicioContext extends ParserRuleContext {
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	 
		public InicioContext() { }
		public void copyFrom(InicioContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IniciarContext extends InicioContext {
		public TerminalNode LLA() { return getToken(LenguajeCParser.LLA, 0); }
		public IniciarContext(InicioContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitIniciar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_inicio);
		try {
			_localctx = new IniciarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(LLA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FinContext extends ParserRuleContext {
		public FinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fin; }
	 
		public FinContext() { }
		public void copyFrom(FinContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FinalizarContext extends FinContext {
		public TerminalNode LLC() { return getToken(LenguajeCParser.LLC, 0); }
		public FinalizarContext(FinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitFinalizar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FinContext fin() throws RecognitionException {
		FinContext _localctx = new FinContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fin);
		try {
			_localctx = new FinalizarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(LLC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EncabezadoContext extends ParserRuleContext {
		public EncabezadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encabezado; }
	 
		public EncabezadoContext() { }
		public void copyFrom(EncabezadoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EncabezarContext extends EncabezadoContext {
		public TerminalNode VOID() { return getToken(LenguajeCParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(LenguajeCParser.MAIN, 0); }
		public TerminalNode PA() { return getToken(LenguajeCParser.PA, 0); }
		public TerminalNode PC() { return getToken(LenguajeCParser.PC, 0); }
		public EncabezarContext(EncabezadoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitEncabezar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EncabezadoContext encabezado() throws RecognitionException {
		EncabezadoContext _localctx = new EncabezadoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_encabezado);
		try {
			_localctx = new EncabezarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(VOID);
			setState(40);
			match(MAIN);
			setState(41);
			match(PA);
			setState(42);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContenidoContext extends ParserRuleContext {
		public List<DeclararContext> declarar() {
			return getRuleContexts(DeclararContext.class);
		}
		public DeclararContext declarar(int i) {
			return getRuleContext(DeclararContext.class,i);
		}
		public List<ImprimirContext> imprimir() {
			return getRuleContexts(ImprimirContext.class);
		}
		public ImprimirContext imprimir(int i) {
			return getRuleContext(ImprimirContext.class,i);
		}
		public List<AsignarContext> asignar() {
			return getRuleContexts(AsignarContext.class);
		}
		public AsignarContext asignar(int i) {
			return getRuleContext(AsignarContext.class,i);
		}
		public List<DeclararasignarContext> declararasignar() {
			return getRuleContexts(DeclararasignarContext.class);
		}
		public DeclararasignarContext declararasignar(int i) {
			return getRuleContext(DeclararasignarContext.class,i);
		}
		public List<CondicionalContext> condicional() {
			return getRuleContexts(CondicionalContext.class);
		}
		public CondicionalContext condicional(int i) {
			return getRuleContext(CondicionalContext.class,i);
		}
		public List<MientrasContext> mientras() {
			return getRuleContexts(MientrasContext.class);
		}
		public MientrasContext mientras(int i) {
			return getRuleContext(MientrasContext.class,i);
		}
		public ContenidoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contenido; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitContenido(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContenidoContext contenido() throws RecognitionException {
		ContenidoContext _localctx = new ContenidoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_contenido);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << ENTERO) | (1L << IMPRIMIR) | (1L << ID))) != 0)) {
				{
				setState(50);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(44);
					declarar();
					}
					break;
				case 2:
					{
					setState(45);
					imprimir();
					}
					break;
				case 3:
					{
					setState(46);
					asignar();
					}
					break;
				case 4:
					{
					setState(47);
					declararasignar();
					}
					break;
				case 5:
					{
					setState(48);
					condicional();
					}
					break;
				case 6:
					{
					setState(49);
					mientras();
					}
					break;
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclararContext extends ParserRuleContext {
		public DeclararContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar; }
	 
		public DeclararContext() { }
		public void copyFrom(DeclararContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracionContext extends DeclararContext {
		public TerminalNode ENTERO() { return getToken(LenguajeCParser.ENTERO, 0); }
		public TerminalNode ID() { return getToken(LenguajeCParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(LenguajeCParser.SEMI, 0); }
		public DeclaracionContext(DeclararContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclararContext declarar() throws RecognitionException {
		DeclararContext _localctx = new DeclararContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declarar);
		try {
			_localctx = new DeclaracionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(ENTERO);
			setState(56);
			match(ID);
			setState(57);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclararasignarContext extends ParserRuleContext {
		public DeclararasignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declararasignar; }
	 
		public DeclararasignarContext() { }
		public void copyFrom(DeclararasignarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclasignarContext extends DeclararasignarContext {
		public TerminalNode ENTERO() { return getToken(LenguajeCParser.ENTERO, 0); }
		public TerminalNode ID() { return getToken(LenguajeCParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(LenguajeCParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(LenguajeCParser.SEMI, 0); }
		public DeclasignarContext(DeclararasignarContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitDeclasignar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclararasignarContext declararasignar() throws RecognitionException {
		DeclararasignarContext _localctx = new DeclararasignarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declararasignar);
		try {
			_localctx = new DeclasignarContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(ENTERO);
			setState(60);
			match(ID);
			setState(61);
			match(IGUAL);
			setState(62);
			expr(0);
			setState(63);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprimirContext extends ParserRuleContext {
		public ImprimirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimir; }
	 
		public ImprimirContext() { }
		public void copyFrom(ImprimirContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImpresionContext extends ImprimirContext {
		public TerminalNode IMPRIMIR() { return getToken(LenguajeCParser.IMPRIMIR, 0); }
		public TerminalNode PA() { return getToken(LenguajeCParser.PA, 0); }
		public TerminalNode PC() { return getToken(LenguajeCParser.PC, 0); }
		public TerminalNode SEMI() { return getToken(LenguajeCParser.SEMI, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ImpresionContext(ImprimirContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitImpresion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprimirContext imprimir() throws RecognitionException {
		ImprimirContext _localctx = new ImprimirContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_imprimir);
		int _la;
		try {
			_localctx = new ImpresionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(IMPRIMIR);
			setState(66);
			match(PA);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PA) | (1L << INT) | (1L << ID) | (1L << RES))) != 0)) {
				{
				setState(67);
				expr(0);
				}
			}

			setState(70);
			match(PC);
			setState(71);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignarContext extends ParserRuleContext {
		public AsignarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignar; }
	 
		public AsignarContext() { }
		public void copyFrom(AsignarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AsignacionContext extends AsignarContext {
		public TerminalNode ID() { return getToken(LenguajeCParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(LenguajeCParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(LenguajeCParser.SEMI, 0); }
		public AsignacionContext(AsignarContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignarContext asignar() throws RecognitionException {
		AsignarContext _localctx = new AsignarContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_asignar);
		try {
			_localctx = new AsignacionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(ID);
			setState(74);
			match(IGUAL);
			setState(75);
			expr(0);
			setState(76);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalContext extends ParserRuleContext {
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
	 
		public CondicionalContext() { }
		public void copyFrom(CondicionalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CondicionalesContext extends CondicionalContext {
		public TerminalNode IF() { return getToken(LenguajeCParser.IF, 0); }
		public TerminalNode PA() { return getToken(LenguajeCParser.PA, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PC() { return getToken(LenguajeCParser.PC, 0); }
		public TerminalNode LLA() { return getToken(LenguajeCParser.LLA, 0); }
		public ContenidoContext contenido() {
			return getRuleContext(ContenidoContext.class,0);
		}
		public TerminalNode LLC() { return getToken(LenguajeCParser.LLC, 0); }
		public SinoContext sino() {
			return getRuleContext(SinoContext.class,0);
		}
		public SinoentoncesContext sinoentonces() {
			return getRuleContext(SinoentoncesContext.class,0);
		}
		public CondicionalesContext(CondicionalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitCondicionales(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_condicional);
		try {
			_localctx = new CondicionalesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(IF);
			setState(79);
			match(PA);
			setState(80);
			condicion(0);
			setState(81);
			match(PC);
			setState(82);
			match(LLA);
			setState(83);
			contenido();
			setState(84);
			match(LLC);
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ELSE:
				{
				setState(85);
				sino();
				}
				break;
			case ELSEIF:
				{
				setState(86);
				sinoentonces();
				}
				break;
			case LLC:
			case IF:
			case WHILE:
			case ENTERO:
			case IMPRIMIR:
			case ID:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionContext extends ParserRuleContext {
		public CondicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicion; }
	 
		public CondicionContext() { }
		public void copyFrom(CondicionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NumerosContext extends CondicionContext {
		public TerminalNode INT() { return getToken(LenguajeCParser.INT, 0); }
		public NumerosContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitNumeros(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CondicionparentesisContext extends CondicionContext {
		public TerminalNode PA() { return getToken(LenguajeCParser.PA, 0); }
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public TerminalNode PC() { return getToken(LenguajeCParser.PC, 0); }
		public CondicionparentesisContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitCondicionparentesis(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FalsoContext extends CondicionContext {
		public TerminalNode FALSE() { return getToken(LenguajeCParser.FALSE, 0); }
		public FalsoContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitFalso(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class YContext extends CondicionContext {
		public List<CondicionContext> condicion() {
			return getRuleContexts(CondicionContext.class);
		}
		public CondicionContext condicion(int i) {
			return getRuleContext(CondicionContext.class,i);
		}
		public TerminalNode AND() { return getToken(LenguajeCParser.AND, 0); }
		public YContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitY(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CondicionesContext extends CondicionContext {
		public Token ol;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode MAY() { return getToken(LenguajeCParser.MAY, 0); }
		public TerminalNode MEN() { return getToken(LenguajeCParser.MEN, 0); }
		public TerminalNode IGU() { return getToken(LenguajeCParser.IGU, 0); }
		public TerminalNode DIF() { return getToken(LenguajeCParser.DIF, 0); }
		public TerminalNode MAYIGU() { return getToken(LenguajeCParser.MAYIGU, 0); }
		public TerminalNode MENIGU() { return getToken(LenguajeCParser.MENIGU, 0); }
		public CondicionesContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitCondiciones(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VerdaderoContext extends CondicionContext {
		public TerminalNode TRUE() { return getToken(LenguajeCParser.TRUE, 0); }
		public VerdaderoContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitVerdadero(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntnegcondicionContext extends CondicionContext {
		public TerminalNode RES() { return getToken(LenguajeCParser.RES, 0); }
		public TerminalNode INT() { return getToken(LenguajeCParser.INT, 0); }
		public IntnegcondicionContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitIntnegcondicion(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OContext extends CondicionContext {
		public List<CondicionContext> condicion() {
			return getRuleContexts(CondicionContext.class);
		}
		public CondicionContext condicion(int i) {
			return getRuleContext(CondicionContext.class,i);
		}
		public TerminalNode OR() { return getToken(LenguajeCParser.OR, 0); }
		public OContext(CondicionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LenguajeCVisitor ) return ((LenguajeCVisitor<? extends T>)visitor).visitO(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionContext condicion() throws RecognitionException {
		return condicion(0);
	}

	private CondicionContext condicion(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CondicionContext _localctx = new CondicionContext(_ctx, _parentState);
		CondicionContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_condicion, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				_localctx = new CondicionesContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
